# Robot_waiter_project

./: .gitignore  README.md  hri
hri/waiter_dialog_manager/: README.md  package.xml  setup.cfg  setup.py
hri/waiter_dialog_manager/launch/: dialog_manager.launch.py
hri/waiter_dialog_manager/waiter_dialog_manager/: dialog_manager_node.py
hri/waiter_nlu_parser/: README.md  package.xml  setup.cfg  setup.py
hri/waiter_nlu_parser/docs/: api_key
hri/waiter_nlu_parser/launch/: nlu_parser.launch.py
hri/waiter_nlu_parser/waiter_nlu_parser/: nlu_node.py
hri/waiter_speech_to_text/: README.md  setup.cfg
hri/waiter_speech_to_text/launch/: speech_to_text.launch.py
hri/waiter_wake_word/: README.md  setup.cfg  setup.py
hri/waiter_wake_word/launch/: wake_word.launch.py
order_schema/: json_1.json
perception/TF & Frame Calibration/: frames_2025-12-18_22.21.35.gv
perception/cam_calibration/: README.md  camera.yaml  package.xml  setup.py
perception/crowd_detector/: .gitignore  README.md  package.xml  setup.cfg  setup.py
perception/crowd_detector/crowd_detector/: crowd_detector_node.py
perception/crowd_detector/launch/: crowd_detector.launch.py
perception/table_localizer/: .gitignore  README.md  package.xml  setup.cfg  setup.py
perception/table_localizer/table_localizer/: __init__.py  fake_apriltag_detector.py  table_localizer_node.py
perception/waiter_orchestrator/: README.md  package.xml  setup.cfg  setup.py
src/cam_calibration/: .gitignore  README.md  setup.cfg
src/crowd_detector/: README.md  setup.cfg
waiter_speech_to_text/: package.xml  setup.py
waiter_speech_to_text/waiter_speech_to_text/: speech_to_text_node.py
waiter_wake_word/: package.xml
waiter_wake_word/waiter_wake_word/: wake_word_node.py
(+13 files in other folders)
