<?xml version="1.0"?>
<package format="3">
  <name>table_localizer</name>
  <version>0.0.0</version>
  <description>AprilTag-based table localization node.</description>

  <maintainer email="senithu@todo.todo">senithu</maintainer>
  <license>TODO</license>

  <!-- Build tool for Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>

  <!-- Test dependencies (you can keep these) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
